--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
     <header>
         <div class="contenedor">
             <nav class="menu">
-                <a href="#acerca-de" id="btn-acercade">Acerca de</a>
-                <a href="#platillos" id="btn-menu">Menú</a>
-                <a href="#galeria" id="btn-galeria">Galería</a>
-                <a href="#ubicacion" id="btn-ubicacion">Ubicación</a>
+		<a href="#menu" id="btn-menu">Menú</a>
+                <a href="#acerca-de" id="btn-acercade">Acerca de</a>         
+                <a href="#contacto-ubicacion" id="btn-ubicacion">Contáctanos</a>
             </nav>
 
             <div class="textos">
@@ -40,15 +39,15 @@
             </p>
         </section>
 
-        <section class="menu">                
-                <h3 class="titulo">Descubre nuestro único</h3>
-                <p>y delicioso paraíso de café</p>
+        <section class="menu" id="menu">                
+                <h3 class="titulo">Descubre</h3>
+                <p>nuestro único y delicioso paraíso de café</p>
                 <button class="ver-menu">
                     Ver menú                     
                 </button>
         </section>
 
-        <section class="acerca-de" tabindex="0">                
+        <section class="acerca-de" tabindex="0" id="acerca-de">                
             <h3>Café artesanal hecho en casa</h3>                       
         </section>
 
@@ -73,7 +72,7 @@
             </div>
         </section>
 
-        <section class="ubicacion" id="ubicacion">
+        <section class="ubicacion" id="contacto-ubicacion">
 			<div class="contenedor">
 				<h3 class="titulo">Ubicación</h3>
 				<div class="direccion">
