--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
     <script src="https://kit.fontawesome.com/5ae52aa509.js" crossorigin="anonymous"></script>
     <title>Cafetería Kapelli</title>
@@ -14,12 +15,27 @@
 <body>
     <header>
         <div class="contenedor">
-            <nav class="menu">
-		<a href="#menu" id="btn-menu">Menú</a>
-                <a href="#acerca-de" id="btn-acercade">Acerca de</a>         
-                <a href="#contacto-ubicacion" id="btn-ubicacion">Contáctanos</a>
-            </nav>
-
+            <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+                <div class="container-fluid">
+                <div class="contenedor-toggle">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                </div>          
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#platillos">Menú</a>
+                      </li>              
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#acerca-de">Acerca de</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#ubiacion">Contáctanos</a>
+                      </li>              
+                  </div>
+                </div>
+              </nav>
             <div class="textos">
                 <h1 class="nombre">Cafetería <span>Kapelli</span></h1>
                 <p>Dale un gusto a tu paladar</p>
