--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Cafetería Kapelli</title>
 </head>
 <body>
-    <header>
+ <header>
         <div class="contenedor">
             <nav class="navbar navbar-expand-lg navbar-dark bg-light">
                 <div class="container-fluid">
@@ -25,7 +25,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#platillos">Menú</a>
+                        <a class="nav-link active" aria-current="page" href="#menu">Menú</a>
                       </li>              
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#acerca-de">Acerca de</a>
@@ -35,7 +35,8 @@
                       </li>              
                   </div>
                 </div>
-              </nav>
+              </nav>   
+
             <div class="textos">
                 <h1 class="nombre">Cafetería <span>Kapelli</span></h1>
                 <p>Dale un gusto a tu paladar</p>
