--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link active" aria-current="page" href="#acerca-de">Acerca de</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#ubicacion">Contáctanos</a>
+                        <a class="nav-link active" aria-current="page" href="#contacto-ubicacion">Contáctanos</a>
                       </li>              
                   </div>
                 </div>
