--- a/menu.html
+++ b/menu.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/estilos-menu.css">
     <script src="https://kit.fontawesome.com/5ae52aa509.js" crossorigin="anonymous"></script>
+    <title>Menú Cafetería Kapelli</title>
 </head>
 <body>
     <header>
