--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
                 <div class="texto">
                     <h3 class="titulo">Acerca de</h3>
-                    <p><span class="bold"> Lorem ipsum dolor </span> sit amet consectetur adipisicing elit. Harum impedit dolorum unde, delectus perspiciatis laudantium ipsa corporis, 
-                    ab odit atque nihil similique at <span class="bold">sapiente amet aspernatur </span> molestiae voluptates corrupti. Dolor!</p>
+                    <p>Hola, gracias por visitar mi portafolio. Mi nombre es Leonel y soy Ingniero de Software con principios de diseño. Desde 2020 y hasta la fecha
+                    me especializo en el diseño y maquetado de sitios web con tecnologías como HTML, CSS3, SASS, JS, Bootstrap así como el uso de software
+                    para diseño Figma y Adobe XD. En este portafolio encontrarás algunos de mis proyectos más representativos que he realizado a lo largo de estos años</p>
                 </div>
             </div>
         </section>
