--- a/proyectos/creditCard/index.html
+++ b/proyectos/creditCard/index.html
@@ -15,7 +15,7 @@
     <div class="contenedor-header">
         <header>
             <div class="logo">
-                <img src="/img/logo.svg" alt="MagmaStore">
+                <img src="img/logo.svg" alt="MagmaStore">
             </div>
         </header>
     </div>
@@ -47,10 +47,10 @@
                 <div class="vista-delantera">
                    
                     <div class="logo">
-                        <img src="/img/visa.png" alt="">
+                        <img src="img/visa.png" alt="">
                     </div>
                     
-                    <img src="/img/chip-tarjeta.png" class="chip" alt="">
+                    <img src="img/chip-tarjeta.png" class="chip" alt="">
 
                     <div class="datos">
 
