Actualización de trabajos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portafolio de Leonel</title>
+    <title>Mi portafolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,600&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
 
             <div class="contenedor-texto">
                 <div class="texto">
-                    <h1 class="nombre">Leonel Guzmán</h1>
+                    <h1 class="nombre">Leonel Guzmán Dueñas</h1>
                     <h2 class="profesion">Ingeniero de software</h2>
                 </div>
             </div>
@@ -39,9 +39,11 @@
 
                 <div class="texto">
                     <h3 class="titulo">Acerca de</h3>
-                    <p>Hola, gracias por visitar mi portafolio. Mi nombre es Leonel y soy Ingniero de Software con principios de diseño. Desde 2020 y hasta la fecha
-                    me especializo en el diseño y maquetado de sitios web con tecnologías como HTML, CSS3, SASS, JS, Bootstrap así como el uso de software
-                    para diseño Figma y Adobe XD. En este portafolio encontrarás algunos de mis proyectos más representativos que he realizado a lo largo de estos años</p>
+                    <p>Hola. Mi nombre es Leonel y soy Ingniero de Software con principios de diseño. Desde 2020 y hasta la fecha
+                    me especializo en el diseño y maquetado y desarrollo de sitios web, utilizando tecnologías de desarrollo como HTML, CSS3, SASS, PHP, JS y Bootstrap, así como el uso 
+                    herramientas para mquetado como lo son Balsamic, Adobe XD y Figma. En este portafolio encontrarás algunos de mis proyectos más que he realizado a lo largo de 
+                    mi carrera. Además de esto, he realizado algunos trabajos con WORDPRESS. <br><br>Desde el 2022 y hasta la fecha me especializo en el diseño de interfaces enfocándome en el Diseño Centrado en el Usuario.
+                    Sin más, te invito a ver mis proyectos.</p>
                 </div>
             </div>
         </section>
@@ -84,7 +86,43 @@
                            <p class="nombre"><a href="proyectos/pacoPlanetas/Captura web_16-12-2022_13248_localhost.jpeg">Sitio web del artista Paco Planetas</a></p> 
                            <p class="categoria">WORDPRESS</p>
                         </div>
+                    </div>
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="proyectos/easyBank/index.html"><img src="img/trabajos/5.png" alt="Lorem Ipsum"></a>
+                        </div>
+                        <div class="descripcion">
+                           <p class="nombre"><a href="proyectos/easyBank/index.html">Easy Bank</a></p> 
+                           <p class="categoria">HTML - CSS</p>
+                        </div>
+                    </div>      
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="proyectos/expenses-chart-component/index.html"><img src="img/trabajos/6.png" alt="Lorem Ipsum"></a>
+                        </div>
+                        <div class="descripcion">
+                           <p class="nombre"><a href="proyectos/expenses-chart-component/index.html">Interfaz de control de gastos</a></p> 
+                           <p class="categoria">HTML - CSS - JS</p>
+                        </div>
                     </div>        
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="proyectos/Huddle-Landing-Page/index.html"><img src="img/trabajos/7.png" alt="Lorem Ipsum"></a>
+                        </div>
+                        <div class="descripcion">
+                           <p class="nombre"><a href="proyectos/Huddle-Landing-Page/index.html">HUDDLE - Landing page</a></p> 
+                           <p class="categoria">HTML - CSS</p>
+                        </div>
+                    </div>        
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="proyectos/Sunny-Side/index.html"><img src="img/trabajos/8.png" alt="Lorem Ipsum"></a>
+                        </div>
+                        <div class="descripcion">
+                           <p class="nombre"><a href="proyectos/Sunny-Side/index.html">Sunny Side</a></p> 
+                           <p class="categoria">HTML - CSS - JS</p>
+                        </div>
+                    </div>                  
                 </div>
             </div>
         </section>
