Añadí dos trabajos

--- a/index.html
+++ b/index.html
@@ -122,6 +122,24 @@
                            <p class="nombre"><a href="proyectos/Sunny-Side/index.html">Sunny Side</a></p> 
                            <p class="categoria">HTML - CSS - JS</p>
                         </div>
+                    </div>        
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="proyectos/Sunny-Side/index.html"><img src="img/trabajos/9.png" alt="Lorem Ipsum"></a>
+                        </div>
+                        <div class="descripcion">
+                           <p class="nombre"><a href="proyectos/webAstral/index.html">Numerología</a></p> 
+                           <p class="categoria">HTML - CSS - JS</p>
+                        </div>
+                    </div>    
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="proyectos/Jalisco/index.html"><img src="img/trabajos/10.png" alt="Lorem Ipsum"></a>
+                        </div>
+                        <div class="descripcion">
+                           <p class="nombre"><a href="proyectos/Sunny-Side/index.html">Jalisco</a></p> 
+                           <p class="categoria">HTML - CSS</p>
+                        </div>
                     </div>                  
                 </div>
             </div>
