Corrección de enlaces

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             <a href="proyectos/Jalisco/index.html"><img src="img/trabajos/10.png" alt="Lorem Ipsum"></a>
                         </div>
                         <div class="descripcion">
-                           <p class="nombre"><a href="proyectos/Sunny-Side/index.html">Jalisco</a></p> 
+                           <p class="nombre"><a href="proyectos/Jalisco/index.html">Jalisco</a></p> 
                            <p class="categoria">HTML - CSS</p>
                         </div>
                     </div>                  
