--- a/index.html
+++ b/index.html
@@ -140,7 +140,16 @@
                            <p class="nombre"><a href="proyectos/Jalisco/index.html">Jalisco</a></p> 
                            <p class="categoria">HTML - CSS</p>
                         </div>
-                    </div>                  
+                    </div>
+                    <div class="trabajo">
+                        <div class="thumb">
+                            <a href="http://serendypia.com.mx/"><img src="img/trabajos/11.png" alt="Serendypia"></a>
+                        </div>
+                        <div class="descripcion">
+                           <p class="nombre"><a href="http://serendypia.com.mx/">Serendypia</a></p> 
+                           <p class="categoria">HTML - CSS</p>
+                        </div>
+                    </div>   
                 </div>
             </div>
         </section>
